# AdHoc

./: .gitignore  PUBLISHING.md  README.md  config.py  data.py  evaluation.py  experiment.ipynb  experiments.ipynb  experiments.py  figures.py  golden_real.json  models.py  plotting.py  pyproject.toml  requirements.txt  sampling.py  simulation.py  tables.py  test_golden.py  test_golden_real.py  utils.py
controls/: lqr.py  model_factory.py  nn.py  train.py
experiments/: __init__.py  allen_cahn.ipynb  allen_cahn_robustness.tex  burgers.ipynb  kdv.ipynb
problems/: __init__.py  allen_cahn.py  base.py  burgers.py  kdv.py  kuramoto_sivashinsky.py
