[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adhoc"
version = "0.1.0"
description = "AdHoc: Adaptive Hybird Learning for Optimal Control"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = []
keywords = ["optimal control", "PDE", "neural network", "LQR", "Burgers", "Allen-Cahn", "KdV"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "torch>=1.9",
    "matplotlib>=3.4",
    "pandas>=1.3",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.1",
]
jupyter = [
    "jupyter>=1.0",
    "ipython>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["controls*", "problems*"]

[tool.setuptools]
py-modules = ["data", "experiments", "figures", "sampling", "simulation"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

